test-expected/large/authorization/Deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    foo.com/duname: authorizatn
    foo.com/duversion: 3.13.2-20190910.1568136398941
    foo.com/version: 3.13.2
  labels:
    app.kubernetes.io/name: authorization
    helm.sh/chart: authorization-3.13.2
  name: authorization
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: authorization
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: authorization
        app.kubernetes.io/name: authorization
    spec:
      containers:
      - envFrom:
        - configMapRef:
            name: foo-shared-config
        - configMapRef:
            name: foo-java-config
        image: repo.foo.com/dmdatap-125.0.0-x64_redhat_linux_7-docker-prod/foo-authorization:3.13.2-20190910.1568136398941
        imagePullPolicy: IfNotPresent
        name: authorization
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
        resources: {}
