test-expected/large/authorization/VirtualService.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  annotations:
    foo.com/duname: authorizatn
    foo.com/duversion: 3.13.2-20190910.1568136398941
    foo.com/version: 3.13.2
  labels:
    app.kubernetes.io/name: authorization
    helm.sh/chart: authorization-3.13.2
  name: authorization
spec:
  gateways:
  - public-gateway
  hosts:
  - '*'
  http:
  - match:
    - uri:
        exact: /authorization
    - uri:
        prefix: /authorization/
    route:
    - destination:
        host: authorization.peekay.svc.cluster.local
